Fix double scroll bar

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -185,7 +185,6 @@ pre code {
   border-radius: 20px;
   word-wrap: keep-all;
   word-break: keep-all;
-  overflow-x: scroll;
 }
 .highlight pre {
   margin-bottom: 0;
